--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
+    "@mui/material": "^6.4.11",
     "@tailwindcss/vite": "^4.0.13",
+    "axios": "^1.8.4",
+    "framer-motion": "^12.7.4",
+    "lucide-react": "^0.501.0",
+    "mdbreact": "^5.2.0",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
